infrastructure/ig-main.tf
resource "aws_internet_gateway" "main" {
  vpc_id = aws_vpc.main.id

  tags = {
    Name    = "main"
    Company = "moonactive"
  }
}
